--- a/frontend/src/tutorials/shared.module.scss
+++ b/frontend/src/tutorials/shared.module.scss
@@ -44,7 +44,7 @@ $padding-left-sidebar: 2.5rem; // For the hanging numbers in the list
   position: fixed;
   z-index: $z-sidebar;
   left: 0;
-  top: 0;
+  top: $height-header;
   bottom: 0;
 
   overflow-y: auto;
@@ -52,7 +52,7 @@ $padding-left-sidebar: 2.5rem; // For the hanging numbers in the list
   -webkit-overflow-scrolling: touch;
 
   width: $width-tutorial-nav;
-  padding-top: $height-header + 1rem;
+  padding-top: 1rem;
   padding-right: 1rem;
   padding-bottom: 5rem; // Room for the overlapping "Saved status"
   padding-left: $padding-left-sidebar;
@@ -183,7 +183,8 @@ $padding-left-sidebar: 2.5rem; // For the hanging numbers in the list
   justify-content: center;
   align-items: center;
 
-  transition: border-bottom-color $duration-active $easing;
+  transition: color $duration-hover $easing,
+    border-bottom-color $duration-active $easing;
 
   svg {
     display: block;
@@ -209,7 +210,12 @@ $padding-left-sidebar: 2.5rem; // For the hanging numbers in the list
     transform-origin: center center;
   }
 
+  &:hover {
+    color: $blue;
+  }
+
   &.toggled {
+    color: $blue;
     border-bottom-color: #fff;
 
     .ht {
